fix trap is not iterated exception in valid cases (i.e. there exists at least one continuous block sequence that has no exception range applied to its last block)